src/test/deca/context/invalid/improvided/instanceOf.deca
// Description:
//   Utilisation de instanceof sur des types hors les classes.
//
// Résultats:
//   Erreur Contextuelle
//   Ligne 25: You cannot use the instance of with the given types. 
class Hotel {
    int codePostale;
    int nb_chambre;
    boolean centre_ville;
   // @Override
    boolean equals(Object obj){
		Hotel o = (Hotel) (obj);
                if (o instanceof Hotel){
                 if ((o.codePostale == this.codePostale) && (o.centre_ville == this.centre_ville) && (o.nb_chambre == this.nb_chambre)){
                        return true;
                }
            }
            return false;
        }
}

class B{
      Hotel h = new Hotel();
      boolean b = h instanceof int;
}

